update_production
